--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.2'
 services:
   elasticsearch:
     build:
+      user: root
       context: elasticsearch/
       args:
         ELK_VERSION: $ELK_VERSION
@@ -28,6 +29,7 @@ services:
 
   logstash:
     build:
+      user: root
       context: logstash/
       args:
         ELK_VERSION: $ELK_VERSION
