--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -2,7 +2,8 @@ ARG ELK_VERSION
 
 # https://www.docker.elastic.co/
 FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
-
+USER root
+RUN elasticsearch-plugin install analysis-icu
 
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
