--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.2'
 
 services:
   elasticsearch:
-    user: root
+     user: root
+    image: elasticsearch:elastdocker-${ELK_VERSION}
+    container_name: elasticsearch
     build:
       context: elasticsearch/
       args:
