--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   elasticsearch:
-    user: root
+    user: "1000:50"
     image: elasticsearch:elastdocker-${ELK_VERSION}
     container_name: elasticsearch
     build:
