--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -2,7 +2,8 @@ ARG ELK_VERSION
 
 # https://www.docker.elastic.co/
 FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
-RUN mkdir -p /usr/share/elasticsearch/data
+RUN rm -rf /usr/share/elasticsearch
+RUN mkdir -p /usr/share/elasticsearch/
 RUN chmod 777 -R /usr/share/elasticsearch/
 RUN chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/
 # USER root
