--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         target: /usr/share/elasticsearch/config/elasticsearch.yml
         read_only: true
       - type: volume
-        source: elasticsearch
+        source: elasticsearch_data
         target: /usr/share/elasticsearch/data
     ports:
       - "9200:9200"
@@ -76,5 +76,5 @@ networks:
   elk:
     driver: bridge
 volumes:
-  elasticsearch:
+  elasticsearch_data:
     driver: local
